SPIXI/SPIXI.Android/Assets/html/css/spixiui.css
/* ... */
.spixi-bubble .title i {
    font-size: 16pt;
    margin-right: 20px;
}

.spixi-bubble .status {
    padding: 10px;
    background-color: white;
    color: #9c9c9c;
    border-bottom: 1px solid #e0e0e0;
    font-size: 10pt;
}

.spixi-bubble .status .content {
    color: black;
    font-size: 12pt;
}

.spixi-bubble .status .fa-exclamation-circle {
    color: #c42425;
    font-size: 16pt;
    float: right;
}

.spixi-bubble .status .fa-check-circle {
    color: #5cc31d;
    font-size: 16pt;
    float: right;
}

.spixi-bubble .status .fa-clock {
    color: #df920c;
    font-size: 16pt;
    float: right;
}

.spixi-bubble .amount {
    padding: 10px;
    background-color: white;
    color: #9c9c9c;
    border-bottom: 1px solid #e0e0e0;
    font-size: 10pt;
}

.spixi-bubble .amount .content
{
    color: black;
    font-size: 12pt;
}

.spixi-bubble .view {
    padding: 10px;
    background-color: white;
    color: #1692d9;
    border-radius: 0px 0px 16px 16px;
    font-size: 12pt;
}

.spixi-bubble .view i {
    font-size: 16pt;
}



.spixi-callbubble
{
    font-size: 10pt;
    position:relative;
    background:#dbdfe2;
    border-radius:16px;
    color: black;
    
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px;
    padding: 15px;
    padding-top: 10px;
    min-width: 80px;
    width: 200px;
    padding-bottom: 28px;   
    
    animation-name: chat_animation;
    animation-duration: 0.3s;

    word-wrap: break-word;
}
.spixi-callbubble-declined { 

    background:#dfbdcf;
}

.spixi-callbubble .icon {
    display: table-cell;
    float: left;
    font-size: 18pt;
    margin-top: 8px;
    position: relative;
    z-index: 2;
    color: #2893EF;
    padding-left: 10px;
    padding-top: 12px;
    
    width: 50px;
    height: 50px;
}

.spixi-callbubble .icon-black {
    display: table-cell;
    float: left;
    font-size: 18pt;
    margin-top: 8px;
    position: relative;
    z-index: 2;
    color: #000;
    padding-left: 10px;
    padding-top: 12px;
    
    width: 50px;
    height: 50px;
}

.spixi-callbubble .title {
    font-size: 10pt;
    margin-left: 55px;
}

.spixi-callbubble .text {
    margin-left: 55px;
    font-size: 12pt;
}

.spixi-callbubble .time {
    margin-left: 55px;
    padding-top: 5px;
    font-size: 7pt;
    color: #000;
    z-index: 4;
    position: absolute;
}

.chatholder {
    -moz-transition: all 0.6s ease-in-out;
    -ms-transition: all 0.6s ease-in-out;
    -o-transition: all 0.6s ease-in-out;
    -webkit-transition: all 0.6s ease-in-out;
    transition: all 0.6s;    
    
    width: 100%;
    height: 57px;
   /* background-color: aqua;*/

}
#chatbar {
    -moz-transition: all 0.6s ease-in-out;
    -ms-transition: all 0.6s ease-in-out;
    -o-transition: all 0.6s ease-in-out;
    -webkit-transition: all 0.6s ease-in-out;
    transition: all 0.6s;
    
    position: fixed;
    z-index: 99;
    
    width: 100%;
    bottom: 0;   
    height: 60px;
    background-color: #FFF;
    border-top: 2px solid #E0E4E6;
    
}

.chatbar-container {
    display: table;
    width: 100%;
    height: 100%;
    margin: auto;
}

.chatbar-sendbutton-wrapper {
    display: table-cell;
    z-index: 2;
    width: 55px;
    vertical-align: middle;

    padding-right: 15px;
}

.chatbar-sendbutton {
    display: table-cell;
    font-size: 16pt;
    color: #FFF;

    padding: 0px;

    vertical-align: middle;
    text-align: center;

    background: #BABABA none repeat scroll 0 0;
    border: medium none;
    border-radius: 50%;
    width: 40px;
    height: 40px;
}

#chat_input {
    display: table-cell;
    width: 100%;
    height: 100%;
    margin-top: 0px;
    padding: 0px 10px 0px 3px;
    border: 0px;
    background-color: #FFF;
    caret-color: #C2185B;
    font-size: 16px;
    outline: none;
    vertical-align: middle;
}

#chatattachbar {
    -moz-transition: all 0.6s ease-in-out;
    -ms-transition: all 0.6s ease-in-out;
    -o-transition: all 0.6s ease-in-out;
    -webkit-transition: all 0.6s ease-in-out;
    transition: all 0.6s;
    
    position: fixed;
    z-index: 99;    
    width: 100%;
    bottom: -60px;
    height: 60px;
    background-color: #FFF;
    border-top: 1px solid #CBCBCB;
    color: #BABABA;
}

#chat_attach {
    display: table-cell;
    width: 35px;
    font-size: 18pt;
    text-align: left;
    color: #BABABA;
    vertical-align: middle;
    padding-top: 4px;
    padding-left: 17px;
    padding-right: 9px;
    
}

#chat_emoji {
    display: table-cell;
    width: 35px;

    font-size: 18pt;
    text-align: left;
    color: #BABABA;
    padding-top: 4px;
    vertical-align: middle;
    
}
.chatattachsymbol {
    color: #BABABA;
    font-size: 18pt;
    padding-top: 5px;
    padding-bottom: 5px;
}


.chat_attach_tab {
    width: 120px;
    height: 60px;
    font-size: 12px;
    text-align: center;
    font-weight: bold;
}

.spixi-friend-status-indicator {
    display: none;
    border-radius: 12pt;
    width: 12pt;
    height: 12pt;
    background: green;
    position: relative;
    margin-top: -12pt;
    margin-left: 25pt;
}

.online .spixi-friend-status-indicator {
    display: block;
}

.spixi-chat-unread-indicator {
    display: none;
    border-radius: 10pt;
    width: 10pt;
    height: 10pt;
    background: #c2185b;
    vertical-align: middle;
    right: 65pt;
    margin-right: 25px;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}

#contactslist .spixi-chat-unread-indicator
{
    right: 0px;
}

.unread .spixi-chat-unread-indicator {
    display: block;
}

#AppsMenu
{
    z-index: 102;
    display: none;
    position: fixed;
    background: white;
    border: 1px solid black;
    border-radius: 20px;
    top: 40px;
    left: 40px;
    bottom: 40px;
    right: 40px;
    box-shadow: inset;
    padding: 20pt;
}

#AppsMenu .close
{
    float: right;
    font-size: 16pt;
    color: black;
    width: 20pt;
    height: 20pt;
    margin-right: -15pt;
    margin-top: -15pt;
}
/* ... */

